Bug 162707 - FILESAVE DOCX lost paragraph style with lots of numberings
Summary: FILESAVE DOCX lost paragraph style with lots of numberings
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-30 09:33 UTC by Miklos Vajna
Modified: 2024-09-02 00:57 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (17.08 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-08-30 09:33 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-08-30 09:33:23 UTC
Created attachment 196114 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached document
2) Check the paragraph style of the only paragraph in the footer: Footer
3) Save as DOCX
4) Reload
5) Check the paragraph style again

Expected result: still Footer

Actual result: Default
Comment 1 Commit Notification 2024-08-30 13:48:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/32b667acd665ce9e66ec6db952e1effb7b4c1031

tdf#162707 DOCX export: fix lost paragraph styles with many numberings

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-09-02 00:57:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/270b5f977934f87ddfcb2d471405cf19c9cecb17

tdf#162707 DOCX export: fix lost paragraph styles with many numberings

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.