tdf#162707 DOCX export: fix lost paragraph styles with many numberings

Open the bugdoc, style of the only para of the only footer is Footer,
save as DOCX, reopen, style changes from Footer to Default.

What seems to happen is that the document has too many numberings, and
each numbering has 9 levels, so if we have a char style for each level,
that easily runs into the MSWORD_MAX_STYLES_LIMIT limit, after which we
silently start dropping styles during export.

Fix the problem by tweaking the fix done in commit
7376a47680b65cbdfd747a736f288e06f51f7f2d (tdf#92335 DOCX: fix
multiplying of "ListLabel" styles, 2019-05-28): if we don't just avoid
writing those ListLabel styles (where the real info is written as a
non-style in numbering.xml, so no formatting is list) but we filter them
out earlier, then MSWordStyles::BuildStylesTable() will count styles
correctly and we'll still have space for the lost Footer style.

Regression from commit f9c8d97d82a85b897520a2fe897352ee5ad879d9
(tdf#95213 DOCX import: don't reuse list label styles, 2016-01-07).

Change-Id: I7a6b0b7b5a7b3c813a844c5fd185cf2f419e1a5c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172647
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 32b667acd665ce9e66ec6db952e1effb7b4c1031)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172671
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>